@startuml

abstract class Pizza{
    name : String

    + prepare() : void
    + bake() : void
    + cut() : void
    + box() : void
}

class CheesePizza {

}

CheesePizza --|> Pizza

class GreekPizza {

}

GreekPizza --|> Pizza

class PizzaStore{
    + orderPizza() : void
    - getType() : String
}

PizzaStore --> Pizza
PizzaStore --> CheesePizza
PizzaStore --> GreekPizza


@enduml